kubernetes/apps/traefik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  entryPoints:
    - internalsecure
  routes:
    - match: Host(`traefik.inernal.jacob-williams.me`)
      kind: Rule
      services:
        - name: traefik
          port: 80
          scheme: http
          passHostHeader: true
      middlewares:
        - name: default-headers
